# omnihub

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
backend/app/: config.py  main.py  models.py
backend/app/data/: industry_phrases.json
backend/app/data/companies/: airbnb.json  anthropic.json  atlassian.json  calendly.json  canva.json  coinbase.json  discord.json  doordash.json  dropbox.json  duolingo.json  figma.json  github.json  hubspot.json  linear.json  netflix.json  notion.json  openai.json  robinhood.json  shopify.json  slack.json  spotify.json  stripe.json  uber.json  vercel.json  walmart.json  zoom.json
backend/app/generator/: catalog.py  industry_map.py  resolver.py  rice.py  synth.py  templates.py
backend/app/routes/: catalog.py  run.py
backend/demo_frontend/: app.js  index.html  styles.css
backend/tests/: _validate_catalog.py  test_generator.py  test_routes.py  test_synth.py
frontend/: companies.js  console.css  index.html  prototype.css  prototype.html  styles.css  vercel.json
frontend/uploads/: OmniSignal_Hub_PRD.docx
