[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnihub-backend"
version = "0.1.0"
description = "OmniHub investor-prototype backend — synthetic, deterministic, zero-credentials product-intelligence demo API."
requires-python = ">=3.11"
authors = [{ name = "Lotus X Ventures" }]
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22; sys_platform != 'win32'",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "tldextract>=5.1",
    "python-slugify>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["data/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
